ass.output
Grammar

    0 $accept: input $end

    1 input: %empty
    2      | line input

    3 line: TITLE
    4     | CHAPTER
    5     | SECTION
    6     | cpara
    7     | para_breaker

    8 cpara: para

    9 para: sentences end BREAK
   10     | sentences end para

   11 para_breaker: BREAK

   12 sentences: word sentences
   13          | word
   14          | seperator sentences

   15 end: FULLSTOP
   16    | EXCLAMATION
   17    | QUESTIONMARK

   18 word: WORD
   19     | NUMBER

   20 seperator: COMMA
   21          | SEMICOLON
   22          | SPACE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TITLE <str> (258) 3
    CHAPTER <str> (259) 4
    SECTION <str> (260) 5
    SPACE (261) 22
    COMMA (262) 20
    SEMICOLON (263) 21
    FULLSTOP (264) 15
    EXCLAMATION (265) 16
    QUESTIONMARK (266) 17
    WORD (267) 18
    NUMBER (268) 19
    BREAK (269) 9 11


Nonterminals, with rules where they appear

    $accept (15)
        on left: 0
    input (16)
        on left: 1 2
        on right: 0 2
    line (17)
        on left: 3 4 5 6 7
        on right: 2
    cpara (18)
        on left: 8
        on right: 6
    para (19)
        on left: 9 10
        on right: 8 10
    para_breaker (20)
        on left: 11
        on right: 7
    sentences (21)
        on left: 12 13 14
        on right: 9 10 12 14
    end (22)
        on left: 15 16 17
        on right: 9 10
    word (23)
        on left: 18 19
        on right: 12 13
    seperator (24)
        on left: 20 21 22
        on right: 14


State 0

    0 $accept: . input $end

    TITLE      shift, and go to state 1
    CHAPTER    shift, and go to state 2
    SECTION    shift, and go to state 3
    SPACE      shift, and go to state 4
    COMMA      shift, and go to state 5
    SEMICOLON  shift, and go to state 6
    WORD       shift, and go to state 7
    NUMBER     shift, and go to state 8
    BREAK      shift, and go to state 9

    $default  reduce using rule 1 (input)

    input         go to state 10
    line          go to state 11
    cpara         go to state 12
    para          go to state 13
    para_breaker  go to state 14
    sentences     go to state 15
    word          go to state 16
    seperator     go to state 17


State 1

    3 line: TITLE .

    $default  reduce using rule 3 (line)


State 2

    4 line: CHAPTER .

    $default  reduce using rule 4 (line)


State 3

    5 line: SECTION .

    $default  reduce using rule 5 (line)


State 4

   22 seperator: SPACE .

    $default  reduce using rule 22 (seperator)


State 5

   20 seperator: COMMA .

    $default  reduce using rule 20 (seperator)


State 6

   21 seperator: SEMICOLON .

    $default  reduce using rule 21 (seperator)


State 7

   18 word: WORD .

    $default  reduce using rule 18 (word)


State 8

   19 word: NUMBER .

    $default  reduce using rule 19 (word)


State 9

   11 para_breaker: BREAK .

    $default  reduce using rule 11 (para_breaker)


State 10

    0 $accept: input . $end

    $end  shift, and go to state 18


State 11

    2 input: line . input

    TITLE      shift, and go to state 1
    CHAPTER    shift, and go to state 2
    SECTION    shift, and go to state 3
    SPACE      shift, and go to state 4
    COMMA      shift, and go to state 5
    SEMICOLON  shift, and go to state 6
    WORD       shift, and go to state 7
    NUMBER     shift, and go to state 8
    BREAK      shift, and go to state 9

    $default  reduce using rule 1 (input)

    input         go to state 19
    line          go to state 11
    cpara         go to state 12
    para          go to state 13
    para_breaker  go to state 14
    sentences     go to state 15
    word          go to state 16
    seperator     go to state 17


State 12

    6 line: cpara .

    $default  reduce using rule 6 (line)


State 13

    8 cpara: para .

    $default  reduce using rule 8 (cpara)


State 14

    7 line: para_breaker .

    $default  reduce using rule 7 (line)


State 15

    9 para: sentences . end BREAK
   10     | sentences . end para

    FULLSTOP      shift, and go to state 20
    EXCLAMATION   shift, and go to state 21
    QUESTIONMARK  shift, and go to state 22

    end  go to state 23


State 16

   12 sentences: word . sentences
   13          | word .

    SPACE      shift, and go to state 4
    COMMA      shift, and go to state 5
    SEMICOLON  shift, and go to state 6
    WORD       shift, and go to state 7
    NUMBER     shift, and go to state 8

    $default  reduce using rule 13 (sentences)

    sentences  go to state 24
    word       go to state 16
    seperator  go to state 17


State 17

   14 sentences: seperator . sentences

    SPACE      shift, and go to state 4
    COMMA      shift, and go to state 5
    SEMICOLON  shift, and go to state 6
    WORD       shift, and go to state 7
    NUMBER     shift, and go to state 8

    sentences  go to state 25
    word       go to state 16
    seperator  go to state 17


State 18

    0 $accept: input $end .

    $default  accept


State 19

    2 input: line input .

    $default  reduce using rule 2 (input)


State 20

   15 end: FULLSTOP .

    $default  reduce using rule 15 (end)


State 21

   16 end: EXCLAMATION .

    $default  reduce using rule 16 (end)


State 22

   17 end: QUESTIONMARK .

    $default  reduce using rule 17 (end)


State 23

    9 para: sentences end . BREAK
   10     | sentences end . para

    SPACE      shift, and go to state 4
    COMMA      shift, and go to state 5
    SEMICOLON  shift, and go to state 6
    WORD       shift, and go to state 7
    NUMBER     shift, and go to state 8
    BREAK      shift, and go to state 26

    para       go to state 27
    sentences  go to state 15
    word       go to state 16
    seperator  go to state 17


State 24

   12 sentences: word sentences .

    $default  reduce using rule 12 (sentences)


State 25

   14 sentences: seperator sentences .

    $default  reduce using rule 14 (sentences)


State 26

    9 para: sentences end BREAK .

    $default  reduce using rule 9 (para)


State 27

   10 para: sentences end para .

    $default  reduce using rule 10 (para)
